[package]
name = "fireframe"
version = "0.1.0"
authors = ["Maciej Krüger <mkg20001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# layout 2020
servo = { git = "https://github.com/servo/servo", rev = "39c3f46375f2baf33c46d92ab5c110766330a6d8", features = [ "layout-2020", "media-dummy" ] } # TODO: media-gstreamer
simpleservo = { git = "https://github.com/servo/servo", rev = "39c3f46375f2baf33c46d92ab5c110766330a6d8", features = [ "layout-2020", "media-dummy" ] } # TODO: media-gstreamer
libservo = { git = "https://github.com/servo/servo", rev = "39c3f46375f2baf33c46d92ab5c110766330a6d8", features = [ "layout-2020", "media-dummy" ] } # TODO: media-gstreamer
style = { git = "https://github.com/servo/servo", rev = "39c3f46375f2baf33c46d92ab5c110766330a6d8", features = [ "servo", "servo-layout-2020" ] }
glutin = ""

json = "0.12"
structopt = ""
loggerv = ""
log = "0.4"

# egl = ""
# smallvec = ""

# Todo: keep updated with upstream

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }

# https://github.com/rust-lang/backtrace-rs/pull/363/
backtrace = { git = "https://github.com/servo/backtrace-rs", branch = "uwp-fix" }

# https://github.com/servo/servo/issues/27039#issuecomment-654400150
[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
